# argos

./: .gitignore  README.md  backfill.sh  pyproject.toml
argos/: __init__.py  main.py
argos/cli/: __init__.py  app.py  theme.py
argos/cli/screens/: __init__.py  dashboard.py  tasks.py  training.py
argos/cli/widgets/: __init__.py  log_panel.py  robot_card.py  swarm_map.py
argos/comm/: __init__.py  battery.py  go2_bridge.py  messages.py  robot_model.py  robot_registry.py  ros2_bridge.py  unitree_bridge.py
argos/navigation/: __init__.py  coverage.py  room.py  zones.py
argos/perception/: __init__.py  detection.py  mapping.py  scene.py
argos/policy/: __init__.py  act.py  base.py  diffusion.py  router.py  vla.py
argos/swarm/: __init__.py  allocator.py  cooperative.py  coordinator.py  dependency.py  planner.py
argos/tasks/: __init__.py  base.py  cooperative.py  library.py  solo.py
argos/training/: __init__.py  augment.py  checkpoints.py  dataset.py  evaluate.py  finetune.py  ingest.py  preprocess.py
argos/training/sim/: __init__.py  isaac_env.py  mujoco_env.py
configs/robots/: g1.yaml  go2.yaml
configs/tasks/: cleaning.yaml
scripts/: install_robot.sh  setup_sim.sh
tests/: test_comm.py  test_navigation.py  test_perception.py  test_policy.py  test_swarm.py  test_tasks.py  test_training.py
